--- a/projects/host-app/src/app/app.component.html
+++ b/projects/host-app/src/app/app.component.html
@@ -1,6 +1,7 @@
-<a routerLink="/">Employee App</a>&nbsp;&nbsp;
+<!-- Not required for CRST Development -->
+<!-- <a routerLink="/">Employee App</a>&nbsp;&nbsp;
 <a routerLink="/project-app">Project App</a>&nbsp;&nbsp;
-<a routerLink="/project-app/assign-project">Assign Project</a>&nbsp;&nbsp;
-<br>
+<a routerLink="/project-app/map">Map</a>&nbsp;&nbsp;
+<br> -->
 
 <router-outlet></router-outlet>
