--- a/projects/project-app/src/app/components/maps/maps-routing/maps-routing.component.html
+++ b/projects/project-app/src/app/components/maps/maps-routing/maps-routing.component.html
@@ -1,7 +1,7 @@
 <div>
  
     <div class="map-container">
-        <h3>Leaflet - location marker with popup</h3>
+        <h3>Leaflet - Routing</h3>
         <div class="map-frame">
             <div id="map"></div>
         </div>
